--- a/client/s.css
+++ b/client/s.css
@@ -215,7 +215,7 @@ html.ios body {
 /*}*/
 .topnav.menu {
   /*border-radius: 0 0 10px 10px !important; */
-  transition: color 1s ease !important;
+  /*transition: color 1s ease !important;*/
   /*background-color: rgba(250,250,250,1) !important; */
   /*background-color: rgba(50,110,100,1) !important; */
   
@@ -228,7 +228,7 @@ html.ios body {
 }
 .hscroll {
     /*border-radius: 0 0 10px 10px !important; */
-    transition: background-color 1s ease !important;
+    /*transition: background-color 1s ease !important;*/
     /* background-color: rgba(250,250,250,.6) !important; */
     /*background-color: rgba(50,110,100,1) !important; */
 
@@ -304,7 +304,7 @@ input
 
 
 .tone_item {
-    transition: all .25s ease !important;
+    /*transition: all .25s ease !important;*/
 }
 
 .ui.button.result:hover{
@@ -341,7 +341,7 @@ a.goto_article {
 .ui.button {
   /*margin: 1px !important;*/
   /*border-radius: 10px !important; */
-  /*transition: height .25s ease !important; */
+  transition: height .25s ease !important; 
   /* background-color: rgba(200, 200, 200, 0.2) !important; */
   /* padding: 12px !important; */
   /*font-family: 'Ubuntu+Mono', sans-serif !important; */
@@ -373,7 +373,7 @@ a.goto_article {
 }
 
 .pointer:hover {
-    /*transition: all .25s linear !important; */
+    transition: all .25s linear !important; 
     cursor: pointer !important;
     /* color: black !important; */
     /* font-size: 130% !important; */
@@ -653,10 +653,6 @@ input {
     max-height:58vh !important;
     min-height:58vh !important;
 }
-
-/*body {*/
-/*    transition: all .25s !important;*/
-/*}*/
 
 
 .button:not(.circular){
