--- a/client/s.css
+++ b/client/s.css
@@ -336,10 +336,10 @@ a.goto_article {
 }
 
 .ui.button:not(.circular) { 
-    /*border-radius: 10px !important;*/
+    border-radius: 10px !important;
 }
 .ui.button {
-  /*margin: 1px !important;*/
+  margin: 2px !important;
   /*border-radius: 10px !important; */
   transition: height .25s ease !important; 
   /* background-color: rgba(200, 200, 200, 0.2) !important; */
