--- a/client/subreddit.jade
+++ b/client/subreddit.jade
@@ -3,7 +3,7 @@ template(name='subreddit')
         .ui.basic.center.aligned.segment
             i.massive.yin.yang.loading.link.grey.icon.get_info.shadowed2
     with current_subreddit.rdata
-        .ui.stackable.grid(style="background-image:url(#{banner_background_image});, background-repeat: no-repeat;")
+        .ui.stackable.grid(style="background-image:url(#{banner_background_image});, background-repeat: no-repeat; min-width: 100%; ")
             .row
                 .eleven.wide.column.seg
                     // img(src=data.banner_img)
