--- a/client/reddit_page.jade
+++ b/client/reddit_page.jade
@@ -71,8 +71,9 @@ template(name='reddit_page')
                     each tags
                         +flat_sub_tag_selector
                     i.big.link.comment.icon.get_post_comments
-                    each rcomments
-                        .ui.header hi #{reddit_id} #{data.body}
+                    .ui.large.selection.list
+                        each rcomments
+                            +rcomment
             .four.wide.column
                 if in_dev
                     +print_this
@@ -97,7 +98,7 @@ template(name='reddit_page')
                     +doc_emotion
                     unless tone
                         +call_tone    
-                a.ui.small.header(href=data.url target='_window')
+                a.ui.large.basic.label(href=data.url target='_window')
                     | #{data.url}
                 if in_dev
                     .ui.small.header reddit_id #{data.reddit_id}
@@ -109,158 +110,15 @@ template(name='reddit_page')
                     |#{data.ups}
                 |{{to_percent data.upvote_ratio}}%
                 .ui.small.inline.header #{data.num_crossposts} crossposts
-        //   "_author_id": "vwCi2GTJgvBJN5F6c",
-        //   "_author_username": "dev",
-        //   "_timestamp": 1605655369365,
-        //   "_timestamp_long": "Tuesday, November 17th 2020, 11:22:49 pm",
-        //   "app": "dao",
-        //   "points": 0,
-        //   "_timestamp_tags": [
-        //     "pm",
-        //     "tuesday",
-        //     "november",
-        //     "17th",
-        //     "2020"
-        //   ],
-        //   "rd": {
-        //     "approved_at_utc": null,
-        //     "subreddit": "todayilearned",
-        //     "selftext": "",
-        //     "author_fullname": "t2_kj4ny",
-        //     "saved": false,
-        //     "mod_reason_title": null,
-        //     "gilded": 0,
-        //     "clicked": false,
-        //     "title": "TIL Unobtainium, a metal featured in films like \"Avatar\" and \"The Core\", was an engineering term coined in the 50's to describe any highly desirable material that is hypothetical, scientifically impossible, extremely rare, costly, or fictional",
-        //     "link_flair_richtext": [],
-        //     "subreddit_name_prefixed": "r/todayilearned",
-        //     "hidden": false,
-        //     "pwls": 6,
-        //     "link_flair_css_class": null,
-        //     "downs": 0,
-        //     "thumbnail_height": 104,
-        //     "top_awarded_type": null,
-        //     "hide_score": false,
-        //     "name": "t3_jvvb4j",
-        //     "quarantine": false,
-        //     "link_flair_text_color": "dark",
-        //     "upvote_ratio": 0.91,
-        //     "author_flair_background_color": null,
-        //     "subreddit_type": "public",
-        //     "ups": 40514,
-        //     "total_awards_received": 10,
-        //     "media_embed": {},
-        //     "thumbnail_width": 140,
-        //     "author_flair_template_id": null,
-        //     "is_original_content": false,
-        //     "user_reports": [],
-        //     "secure_media": null,
-        //     "is_reddit_media_domain": false,
-        //     "is_meta": false,
-        //     "category": null,
-        //     "secure_media_embed": {},
-        //     "link_flair_text": null,
-        //     "can_mod_post": false,
-        //     "score": 40514,
-        //     "approved_by": null,
-        //     "author_premium": false,
-        //     "thumbnail": "https://a.thumbs.redditmedia.com/jm34rmRwqouXF-MQcAIHMwj5Zv5sMWA4IPETCuQ7K08.jpg",
-        //     "edited": false,
-        //     "author_flair_css_class": null,
-        //     "author_flair_richtext": [],
-        //     "gildings": {
-        //       "gid_1": 2
-        //     },
-        //     "post_hint": "link",
-        //     "content_categories": null,
-        //     "is_self": false,
-        //     "mod_note": null,
-        //     "created": 1605657013,
-        //     "link_flair_type": "text",
-        //     "wls": 6,
-        //     "removed_by_category": null,
-        //     "banned_by": null,
-        //     "author_flair_type": "text",
-        //     "domain": "en.wikipedia.org",
-        //     "allow_live_comments": true,
-        //     "selftext_html": null,
-        //     "likes": null,
-        //     "suggested_sort": null,
-        //     "banned_at_utc": null,
-        //     "url_overridden_by_dest": "https://en.wikipedia.org/wiki/Unobtainium",
-        //     "view_count": null,
-        //     "archived": false,
-        //     "no_follow": false,
-        //     "is_crosspostable": false,
-        //     "pinned": false,
-        //     "over_18": false,
-        //     "preview": {
-        //       "images": [
-        //         {
-        //           "source": {
-        //             "url": "https://external-preview.redd.it/tixCC98_x8ZDwJADFtMLxdSYqmWdHYzEMDGu1yzZbL8.jpg?auto=webp&amp;s=0546c81ef2995a5e2fe87cb5baa3145df1553e8e",
-        //             "width": 219,
-        //             "height": 163
-        //           },
-        //           "resolutions": [
-        //             {
-        //               "url": "https://external-preview.redd.it/tixCC98_x8ZDwJADFtMLxdSYqmWdHYzEMDGu1yzZbL8.jpg?width=108&amp;crop=smart&amp;auto=webp&amp;s=55ea457cdbdd24533464de868e64f12a3258050a",
-        //               "width": 108,
-        //               "height": 80
-        //             },
-        //             {
-        //               "url": "https://external-preview.redd.it/tixCC98_x8ZDwJADFtMLxdSYqmWdHYzEMDGu1yzZbL8.jpg?width=216&amp;crop=smart&amp;auto=webp&amp;s=45ce9d06271f6f71cde5b0f8da1fe657e66d843d",
-        //               "width": 216,
-        //               "height": 160
-        //             }
-        //           ],
-        //           "variants": {},
-        //           "id": "AFxftUCiMXPhg-JRVAaYxw5itGjbAQL99OQBEvg-ihk"
-        //         }
-        //       ],
-        //       "enabled": false
-        //     },
-        //     ],
-        //     "awarders": [],
-        //     "media_only": false,
-        //     "can_gild": false,
-        //     "spoiler": false,
-        //     "locked": false,
-        //     "author_flair_text": null,
-        //     "treatment_tags": [],
-        //     "visited": false,
-        //     "removed_by": null,
-        //     "num_reports": null,
-        //     "distinguished": null,
-        //     "subreddit_id": "t5_2qqjc",
-        //     "mod_reason_by": null,
-        //     "removal_reason": null,
-        //     "link_flair_background_color": "",
-        //     "id": "jvvb4j",
-        //     "is_robot_indexable": true,
-        //     "report_reasons": null,
-        //     "author": "Afrostoyevsky",
-        //     "discussion_type": null,
-        //     "num_comments": 1316,
-        //     "send_replies": true,
-        //     "whitelist_status": "all_ads",
-        //     "contest_mode": false,
-        //     "mod_reports": [],
-        //     "author_patreon_flair": false,
-        //     "author_flair_text_color": null,
-        //     "permalink": "/r/todayilearned/comments/jvvb4j/til_unobtainium_a_metal_featured_in_films_like/",
-        //     "parent_whitelist_status": "all_ads",
-        //     "stickied": false,
-        //     "url": "https://en.wikipedia.org/wiki/Unobtainium",
-        //     "subreddit_subscribers": 24205147,
-        //     "created_utc": 1605628213,
-        //     "num_crossposts": 2,
-        //     "media": null,
-        //     "is_video": false
-        //   },
-        //   "author": "Afrostoyevsky",
-        //   "is_video": false,
-        //   "over_18": false,
-        //   "subreddit": "todayilearned",
-        //   "thumbnail": "https://a.thumbs.redditmedia.com/jm34rmRwqouXF-MQcAIHMwj5Zv5sMWA4IPETCuQ7K08.jpg"
-        // }
+                
+                
+
+template(name='rcomment')                
+    .ui.item.call_watson_comment
+        |{{#markdown}} {{data.body}} {{/markdown}}
+        +doc_emotion_small
+        each replies.data.children
+            .ui.small.header #{data.body} hi
+        if in_dev
+            +print_this
+                
